[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/Fire.gd" type="Script" id=1]
[ext_resource path="res://assets/particles/circleSmooth.png" type="Texture" id=2]
[ext_resource path="res://assets/particles/smoke_01.png" type="Texture" id=3]
[ext_resource path="res://assets/particles/fire_01.png" type="Texture" id=4]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.271277, 0.702128, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.196078, 0.855469, 0.855469, 0.855469, 0.196078, 0.513726, 0.513726, 0.513726, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.543934 ), 0.0, 0.0, 0, 0, Vector2( 0.236599, 0.763934 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
angular_velocity = 4.58743e-41
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 10.0
angle = 360.0
angle_random = 1.0
scale_random = 0.1
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.287234, 0.664894, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 0.710938, 0.710938, 0.710938, 0.196078, 0.296875, 0.296875, 0.296875, 0.196078, 0.513726, 0.513726, 0.513726, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
angular_velocity = 2.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 10.0
angle = 360.0
angle_random = 1.0
scale_random = 0.1
scale_curve = SubResource( 4 )
color_ramp = SubResource( 7 )

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.271277, 0.702128, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 0.352941, 0.352941, 0.352941, 0.407843, 0, 0, 0, 0.196078, 0.513726, 0.513726, 0.513726, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
flag_disable_z = true
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
angular_velocity = 4.58743e-41
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 10.0
angle = 360.0
angle_random = 1.0
scale_random = 0.1
scale_curve = SubResource( 4 )
color_ramp = SubResource( 10 )

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0.0150943, 0.188679, 0.358491, 0.724528, 1 )
colors = PoolColorArray( 1, 0.971715, 0, 0.196078, 1, 0.94902, 0, 0.313726, 1, 0.478431, 0, 0.352941, 0.976471, 0.239216, 0, 0.313726, 1, 0.54902, 0, 0 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0, 0.896 ), 0.0, 0.0, 0, 0, Vector2( 0.345756, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.3328 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=16]
emission_shape = 2
emission_box_extents = Vector3( 7, 14, 1 )
flag_disable_z = true
spread = 20.21
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.2
angular_velocity = 0.173529
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -60.0
scale_curve = SubResource( 15 )
color_ramp = SubResource( 13 )

[node name="Fire" type="Node2D"]
script = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -40 )
texture = ExtResource( 2 )
texture_scale = 3.0
color = Color( 1, 0.678431, 0.443137, 1 )
energy = 0.5

[node name="Smoke_1" type="Particles2D" parent="."]
position = Vector2( 0, -30 )
rotation = -1.5708
amount = 6
lifetime = 6.0
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="Smoke_2" type="Particles2D" parent="."]
position = Vector2( 0, -30 )
rotation = -1.5708
scale = Vector2( 1.05, 1.05 )
amount = 5
lifetime = 8.0
process_material = SubResource( 8 )
texture = ExtResource( 3 )

[node name="Smoke_3" type="Particles2D" parent="."]
position = Vector2( 0, -30 )
rotation = -1.5708
scale = Vector2( 1.1, 1.1 )
amount = 5
lifetime = 10.0
process_material = SubResource( 11 )
texture = ExtResource( 3 )

[node name="Outer_1" type="Particles2D" parent="."]
position = Vector2( 0, -10 )
rotation = -1.5708
amount = 4
lifetime = 1.4
process_material = SubResource( 16 )
texture = ExtResource( 4 )

[node name="Outer_2" type="Particles2D" parent="."]
position = Vector2( 0, -10 )
rotation = -1.5708
scale = Vector2( 1.05, 1.05 )
amount = 2
lifetime = 1.6
process_material = SubResource( 16 )
texture = ExtResource( 4 )

[node name="Outer_3" type="Particles2D" parent="."]
position = Vector2( 0, -10 )
rotation = -1.5708
scale = Vector2( 1.1, 1.1 )
amount = 2
lifetime = 1.6
process_material = SubResource( 16 )
texture = ExtResource( 4 )
